[gd_scene load_steps=9 format=3 uid="uid://b3xnahgbyyf0j"]

[ext_resource type="Script" uid="uid://8hrai0ih02vj" path="res://Scenes/Hub/globe.gd" id="1_kc167"]
[ext_resource type="PackedScene" uid="uid://c7jqkthesq0lc" path="res://Scenes/Levels/Level_1/Level_One.tscn" id="2_gpk4l"]
[ext_resource type="Shader" uid="uid://2jdtapac2i6e" path="res://Scenes/Hub/RippleEffect.gdshader" id="3_fmvc7"]
[ext_resource type="PackedScene" uid="uid://cgdiok6brispc" path="res://Components/Interactable/interactable.tscn" id="3_p15m1"]
[ext_resource type="Texture2D" uid="uid://c66y6vegqui8b" path="res://Assets/Hub (art)/Globe.png" id="4_kfnsq"]
[ext_resource type="Texture2D" uid="uid://cytob4v4jf8q0" path="res://Assets/Hub (art)/Base (blank).png" id="5_gjxdm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kcucb"]
shader = ExtResource("3_fmvc7")
shader_parameter/wave_count = 20.0
shader_parameter/speed = 3.0
shader_parameter/height = 0.003

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vcagg"]
size = Vector2(1815, 2268)

[node name="Globe" type="Node2D"]
script = ExtResource("1_kc167")
level_scene = ExtResource("2_gpk4l")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_kcucb")
offset_left = -1161.0
offset_top = -1179.0
offset_right = 1154.0
offset_bottom = 1136.0

[node name="Globe" type="Sprite2D" parent="."]
texture = ExtResource("4_kfnsq")

[node name="Base" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("5_gjxdm")

[node name="Interactable" parent="." instance=ExtResource("3_p15m1")]
visible = false

[node name="InteractionZone" parent="Interactable" index="0"]
position = Vector2(4.5, 38)
shape = SubResource("RectangleShape2D_vcagg")

[node name="Label" type="Label" parent="."]
offset_left = -28.0
offset_top = -9.0
offset_right = 27.0
offset_bottom = 14.0
text = "Locked"

[connection signal="body_entered" from="Interactable" to="." method="_on_interactable_body_entered"]
[connection signal="body_exited" from="Interactable" to="." method="_on_interactable_body_exited"]
[connection signal="interaction_occured" from="Interactable" to="." method="_on_interactable_interaction_occured"]

[editable path="Interactable"]
